--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "homepage": "https://github.com/Rafflecopter/node-qb-http",
   "dependencies": {
-    "underscore": "~1.5.2",
-    "request": "~2.33.0",
-    "express": "~3.4.8",
-    "async": "~0.7.0"
+    "async": "^0.9.0",
+    "basic-auth": "^1.0.0",
+    "body-parser": "^1.12.0",
+    "express": "^4.12.2",
+    "request": "^2.53.0"
   },
   "devDependencies": {
     "qb": "~0.5.11"
