--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "basic-auth": "^1.0.0",
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "unix-listen": "^0.1.1"
   },
   "devDependencies": {
-    "qb": "~0.5.11"
+    "qb": "~0.5.11",
+    "xtend": "^4.0.0"
   }
 }
