--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   },
   "homepage": "https://github.com/Rafflecopter/node-qb-http",
   "dependencies": {
-    "async": "^0.9.0",
-    "basic-auth": "^1.0.0",
-    "body-parser": "^1.12.0",
-    "express": "^4.12.2",
-    "request": "^2.53.0",
-    "unix-listen": "^0.1.1"
+    "async": "0.9.0",
+    "basic-auth": "1.0.0",
+    "body-parser": "1.12.0",
+    "express": "4.12.2",
+    "request": "2.53.0",
+    "unix-listen": "0.1.1"
   },
   "devDependencies": {
-    "qb": "~0.5.11",
-    "xtend": "^4.0.0"
+    "qb": "2.0.0-rc1",
+    "xtend": "4.0.0"
   }
 }
