--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qb-http",
-  "version": "0.2.4",
+  "version": "2.0.0-rc1",
   "description": "http dialect for QB service framework",
   "main": "index.js",
   "scripts": {
